Fix horizontal scroll issue

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -105,3 +105,7 @@ h2 span {
 ::selection {
   background-color: #FF1E00;
 }
+
+body {
+  overflow-x: hidden;
+}
